@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-11T16:13:41Z",
+  "timestamp" : "2023-07-16T16:12:35Z",
   "count_outdated" : 42,
   "uniques_outdated" : 32,
-  "count" : 51,
-  "uniques" : 38,
+  "count" : 52,
+  "uniques" : 39,
   "clones" : [
     {
       "timestamp": "2023-07-02T00:00:00Z",
@@ -40,6 +40,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
