@@ -1,5 +1,5 @@
 {
-  "count": 9,
+  "count": 10,
   "uniques": 6,
   "clones": [
     {
@@ -21,6 +21,11 @@
       "timestamp": "2023-07-11T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
